syntax = "proto3";

package pb;
option go_package="./pb";

service payment {
  rpc orderPayment(OrderPaymentReq) returns (OrderPaymentResp);
  rpc getPaymentDetail(GetPaymentDetailReq) returns (GetPaymentDetailResp);
}

message OrderPaymentReq {
  int64   UserID = 1;
  string  OrderSn = 2;
  int64   ServiceType = 3;
}
message OrderPaymentResp {
  int64   PayTotalPrice = 1;
  string  PaySn = 2;
}

message GetPaymentDetailReq {
  string  OrderSn = 1;
}
message GetPaymentDetailResp {
  int64   ID = 1;
  string  PaymentSn = 2;
  string  OrderSn = 3;
  int64   UserID = 4;
  int64   PayMode = 5;
  string  TradeType = 6;
  string  TradeState = 7;
  int64   PayTotal = 8;
  string  TransactionID = 9;
  string  TradeStateDesc = 10;
  int64   PayStatus = 11;
  string  PayTime = 12;
}